kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/ClassSubTypingWithGenericOperations.kmt
/* $Id: ClassSubTypingWithGenericOperations.kmt,v 1.1 2005-04-20 23:58:29 ffleurey Exp $ */

// Simple erros subtyping test for simple 
// inheritance between two generic classes
// and generic operations

package tctest;

class X {}
class Y inherits X {}

class A<T> {}
class B<G> inherits A<G> {}

class Test {

	operation test1<T>(t : T) : T is do
		var y : Y
		y := test1(X.new)
	end
	
	operation test2<T>(t : T) : T is do
		var a : A<Y> 
		var b : B<Y> init B<Y>.new
		b := test1(a)
	end
	
	operation test3<T>(t : B<T>) : T is do
		var a : B<X>
		var y : Y init test3(a)
	end

}

/* END OF FILE */